Stop quiz buttons stretching vertically when the definition is long

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 }
 
 .entry-choices {
+    align-content: start;
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
